# virtuoso-opensource

./: ChangeLog  NEWS.md  README.GIT.md  README.md  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.yml
binsrc/: Makefile.am
binsrc/VirtuosoClient.Net/: VirtuosoClient.NET.vc2005.csproj
binsrc/bpel/: Makefile.am  bpel_eng.sql  bpel_sticker.xml  bpel_style.xsl
binsrc/conductor/: account_create.vspx  databases_table_edit.vspx  db_rdf_objects.vspx  db_rdf_owl.vspx  db_rdf_view_3.vspx  db_repl_basic_start.vspx  file_browser.xsl  http_listeners.vspx  inifile.vspx  logging_view.vspx  r2rml_import.vspx  rdf_import.vspx  site.vspx  soap_services_edit.vspx  sparql_input.vspx  vad.vspx  vad_src.vspx  vad_version  vdir_browser.vspx
binsrc/dav/: dav_api.sql  uriqa.sql
binsrc/driver/: Makefile.am
binsrc/fct/: demo_queries.vsp  opensearchdescription.vsp  sparql.vsp  vad_version
binsrc/isparql/: Makefile.am  defaults.vsp
binsrc/rdb2rdf/: r2rml.sql  vad_version
binsrc/rdf_mappers/: rdf_mappers.sql
binsrc/samples/sparql_demo/: .gitignore  Makefile.am  sparql_ajax.vsp  sparql_demo_sticker.xml
binsrc/sqldoc/: isql_log_normalize.c
binsrc/tutorial/: page.xsl  page_sioc_output.xsl  setup_tutorial.sql  sioc_ttl.vsp  sql_rdf.sql  vad_version
binsrc/vad/: vad_make.sql  vad_misc.sql
binsrc/vadpacker/: AUTHORS  ChangeLog  NEWS  vadpacker.py
binsrc/virtodbc/: virtodbc.rc
binsrc/virtuoso/: viconfig.c  virtuoso.ini  virtuoso_t.rc
docsrc/xmlsource/: virtdocs.xml
libsrc/Dk/: Dkbox.c  Dktypes.h  Dkutil.c  Dkutil.h
libsrc/Tidy/: streamio.c  streamio.h
libsrc/Wi/: bif_explain.c  bif_file.c  bif_regexp.c  bif_soap.c  bif_xml.c  chash.c  disk.c  dks_esc.c  eqlcomp.c  extent.c  hash.c  http.c  http.h  http_client.c  log.c  numeric.c  page.c  rdfbox.c  rdfinf.c  space.c  sparql.h  sparql.sql  sparql_core.c  sparql_io.sql  sparql_p.y  sparql_tree.c  sparul2sql.c  sqlbif.c  sqldf.c  (+19 more)
windows/: blobs.vcxproj  burstoff.vcxproj  creolewiki.vcxproj  cursor.vcxproj  cutter.vcxproj  dk1t.vcxproj  dk1t_mt.vcxproj  dksrv.vcxproj  geos.vcxproj  getdata.vcxproj  graphql.vcxproj  hosting_perl.vcxproj  hosting_php.vcxproj  hosting_python.vcxproj  im.vcxproj  ins.vcxproj  isql.vcxproj  isql_native.vcxproj  libvirtuoso_odbc_t.vcxproj  maildrop.vcxproj  mediawiki.vcxproj  odbcmail.vcxproj  proj4.vcxproj  scroll.vcxproj  setcurs.vcxproj  shapefileio.vcxproj  threads.vcxproj  threads_mt.vcxproj  threadw.vcxproj  threadw_mt.vcxproj  tidy.vcxproj  tpcc.vcxproj  urlsimu.vcxproj  util.vcxproj  util_mt.vcxproj  virtodbc.vcxproj  virtoledb.vcxproj  virtuoso-opensource.sln  virtuoso_odbc_clr_t.vcxproj  virtuoso_odbc_javavm_t.vcxproj  (+8 more)
(+49 files in other folders)
